--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -1,10 +1,14 @@
 /*Structure*/
 body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background: #fcf6f6;
 }
 #content {
-    
+    width: 75%;
+    margin: auto;
+    background: #f5d8d8;
+    padding: 10px 20px;
+    box-shadow: 10px 10px #b86271;
+    border-radius: 7px;
 }
 
 /*Navigation*/
@@ -27,7 +31,7 @@ h1 {
     color: #F2778D;
 }
 h2 {
-    color: #914755;
+    color: #b86271;
 }
 p {
     color: #793c47;
