--- a/csce242/assignments/03-page-layout/styles.css
+++ b/csce242/assignments/03-page-layout/styles.css
@@ -1,11 +1,13 @@
 /*Main Structure*/
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #F2EED8;
-    margin: 0;
+    background: #FFFFFF;
+    width: 80%;
+    margin: 5px auto;
+    border: 1px solid #A4BFB8;
 }
-#main-content {
-
+#main-content, #main-header {
+    background: #F2EED8;
 }
 #bottom-rows {
     background: #F2EED8;
@@ -22,11 +24,11 @@ body {
 }
 .bottom-row-color {
     background: #5E888C;
-    margin: 10px;
+    margin: 10px 0;
 }
 .bottom-row-color2 {
     background: #A4BFB8;
-    margin: 10px;
+    margin: 10px 0;
 }
 #main-footer {
     background: #D98484;
@@ -44,6 +46,7 @@ body {
 .first-row-image {
     text-align: center;
     margin: 0 20px;
+
 }
 .bottom-row-image {
     text-align: center;
@@ -60,23 +63,27 @@ body {
 #main-nav li {
     list-style-type: none;
     background: #D98484;
-    padding: 8px;
+    padding: 10px;
     border: 1px solid #A4BFB8;
     flex:1;
 }
 #main-nav a {
     text-decoration: none;
+    font-size: x-large;
     color: #FFFFFF;
 }
 
 /*Typography*/
 #main-header h1 {
+    font-size: 42px;
     color: #5E888C;
     text-align: center;
+    padding: 34px;
+    margin: 0;
 }
 #important-txt {
     color: #5E888C;
-    margin: 5px;
+    margin: 20px 5px;
 }
 .first-row h3 {
     text-align: center;
@@ -92,21 +99,17 @@ body {
 
 /*Larger devices*/
 @media (min-width: 768px) {
-    .columns {
-        display: flex;
-    }
     .one {
         flex: 1;
+        /*max-width: 50%;*/
     }
-    .two {
-        flex:2;
+    .flex-container, .rowof3 {
+        display: flex;
+
     }
     #main-nav ul {
         display: flex;
         text-align: center;
-    }
-    .flex-container, .rowof3 {
-        display: flex;
     }
     .bottom-rows {
         display: block;
