--- a/csce242/assignments/03-page-layout/styles.css
+++ b/csce242/assignments/03-page-layout/styles.css
@@ -1,7 +1,10 @@
 /*Main Structure*/
+html {
+    background: #FFFFFF;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background: #FFFFFF;
+    background: #F2EED8;
     width: 80%;
     margin: 5px auto;
     border: 1px solid #A4BFB8;
@@ -25,6 +28,7 @@ body {
 .bottom-row-color {
     background: #5E888C;
     margin: 10px 0;
+    height: 70%;
 }
 .bottom-row-color2 {
     background: #A4BFB8;
@@ -47,12 +51,14 @@ body {
     display: block;
     margin: auto;
     padding: 0 20px;
+    width: 80%;
+    margin-top: -20px;
 }
 .bottom-row-image img {
     display: block;
     margin: auto;
+    width: 150px;
 }
-
 
 /*Navigation*/
 #main-nav ul {
@@ -91,6 +97,15 @@ body {
     padding: 10px;
     color: #FFFFFF;
     margin: 0;
+    position: relative;
+    z-index: 2;
+}
+.bottom-row h3 {
+    margin: 8px;
+    margin-left: 0;
+}
+.bottom-row p {
+    margin-top: 0;
 }
 #main-footer p {
     color: #FFFFFF;
