--- a/csce242/examples/05-javascript/styles.css
+++ b/csce242/examples/05-javascript/styles.css
@@ -146,7 +146,7 @@ nav li {
     list-style-type:none;   /* Remove bullet */
     background:#ffc8dd;
     padding:5px;
-    border-bottom:1px solid #cdb4db;;
+    border-bottom:1px solid #cdb4db;
 }
 
 nav a {
@@ -197,7 +197,6 @@ nav a {
     text-align: center;
     padding-top:10px;
 }
-
 .hide-small {
     display: none;
 }
