--- a/csce242/project/homepage/styles.css
+++ b/csce242/project/homepage/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Galindo&display=swap');
 /*MAIN STRUCTURE*/
 :root {
     --main-header: #FFF2F8;
@@ -18,16 +19,24 @@
     margin: 0;
     border-bottom: 1px solid var(--border);
 }
+#main-body {
+    margin: 0;
+}
 #title {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 #shop-mens-womens {
+    position: relative;
+    margin: 0;
     background: var(--womens);
     border-bottom: 1px solid var(--border);
+    padding: 45px;
 }
 #main-img-collage {
     background: var(--main-header);
-    padding: 35px;
+    border-radius: 10px;
 }
 #shop-sale {
     border-bottom: 1px solid var(--border);
@@ -40,6 +49,9 @@
     background: var(--home);
     border-bottom: 1px solid var(--border);
 }
+#quick-shop-content {
+    width: 100%;
+}
 #main-footer {
     background: var(--footer);
 }
@@ -50,9 +62,6 @@
 }
 
 /*NAVIGATION*/
-.hide-small {
-    display: none;
-}
 #main-header ul {
     padding-left: 0;
     text-align: center;
@@ -98,22 +107,43 @@
 }
 
 /*IMAGES*/
-#main-img-collage-imgs {
-    text-align: center;
+#title img {
+    width: 100%;
 }
-#main-img-collage-imgs img {
-    margin: 20px;
-    border-radius: 10px;
+#img-collage-flower {
+    position: absolute;
+    bottom: -20px;
+    left:1px;
+}
+#img-collage-flower2 {
+    position: absolute;
+    bottom: -20px;
+    left:120px;
 }
 #shop-sale-img img {
     width: 100%;
 }
+#sale-flower2 {
+    position: absolute;
+    left: 3%;
+    top:7%;
+}
+.main-quick-shop-width {
+    margin: 20px;
+}
 #main-quick-shop-imgs {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
     justify-content: space-evenly;
     text-align: center;
-    flex-wrap: wrap;
-}
+} 
 #main-quick-shop-imgs img {
+    border-radius: 10px;
+    margin: 20px;
+}
+.container img {
+    /* width: 100%; */
     border-radius: 10px;
     margin: 20px;
 }
@@ -135,8 +165,45 @@
     margin: 0;
 }
 
+/*MAIN IMAGE COLLAGE*/
+#main-img-collage-imgs {
+    position: relative;
+    padding: 25px;
+    --gap: 25px;
+    --num-cols: 5;
+    --row-height: 400px;
+    
+    box-sizing: border-box;
+    padding: --gap;
+
+    display: grid;
+    grid-template-columns: repeat(var(--num-cols), 1fr);
+    grid-auto-rows: var(--row-height);
+    gap: var(--gap);
+}
+#main-img-collage-imgs img {
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.main-img-collage-row-2 {
+    grid-row: span 2;
+}
+.main-img-collage-col-2 {
+    grid-column: span 2;
+}
+#connected img {
+    padding: 2px;
+}
+
 
 /*TYPOGRAPHY*/
+body {
+  font-family: "Galindo", sans-serif;
+  font-weight: 200;
+}
+
 #main-header li, #main-header h1 {
     color: var(--footer);
     display: flex;
@@ -146,9 +213,10 @@
     font-size: 20px;
 }
 #title h1 {
-    margin: 0;
+    padding-left: 20px;
 }
 #shop-sale-txt {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -186,7 +254,12 @@
 
 /*BUTTON*/
 #main-shop-btns {
-    text-align: center;
+    position: absolute;
+    bottom: 45px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 20px;
 }
 #main-shop-men:hover {
   background-position: 0 0;
@@ -195,35 +268,43 @@
   background-position: 100% 0;
 }
 #main-shop-men, #main-shop-women {
+    font-family: "Galindo", sans-serif;
     padding: 20px;
     background: var(--btn-background);
     color: var(--main-header);
     border-radius: 10px;
     border: none;
     font-size:larger;
-    width: 170px;
+    width: 190px;
 }
 #main-shop-men {
     cursor: pointer;
-    background: linear-gradient(90deg, var(--womens), var(--footer), var(--footer));
+    background: linear-gradient(90deg, var(--womens), var(--btn-background), var(--btn-background));
     background-size: 200% 100%;
     background-position: 100% 0;
     transition: background-position .5s;
 }
 #main-shop-women {
     cursor: pointer;
-    background: linear-gradient(270deg, var(--womens), var(--footer), var(--footer));
+    background: linear-gradient(270deg, var(--womens), var(--btn-background), var(--btn-background));
     background-size: 200% 100%;
     background-position: 0 0%;
     transition: background-position .5s;
 }
 #shop-sale-txt button {
+    font-family: "Galindo", sans-serif;
     background: var(--home);
     color: var(--footer);
     font-size: xx-large;
-    border: none;
+    border: 2px solid var(--footer);
     border-radius: 10px;
     margin: 10px;
+    padding: 10px 30px;
+}
+#shop-sale-txt button:hover {
+    background: var(--footer);
+    color: var(--home);
+    border: 2px solid var(--home);
 }
 #quick-shop-content {
     position: relative;
@@ -238,14 +319,26 @@
 }
 #main-quick-shop-left {
     position: absolute;
-    top: 200px;
     left: 30px;
+    top: 50%;
+    z-index: 2;
 }
 #main-quick-shop-right {
     position: absolute;
-    bottom: 242px;
-    right: 30px
+    right: 30px;
+    top: 50%;
 }
+.hide-small {
+    display: none;
+}
+
+/* SMALLER DEVIES */
+@media (max-width: 1024px) {
+    #main-img-collage-imgs {
+        --num-cols:2;
+        --row-height: 200px;
+    }
+} 
 
 /*LARGER DEVICES*/
 @media (min-width: 768px) {
@@ -253,6 +346,7 @@
         background:var(--main-header);
         display: flex;
         justify-content: space-between;
+        align-items: center; 
     }
     #main-header h1 {
         font-size: 48px;
@@ -294,9 +388,56 @@
         display: inline;
         content:"|";
         color: var(--footer-txt);
-        margin: 0 10px;
+        margin: 0 20px 0;
+
     }
     .hide-small {
         display: flex;
+    }
+    /*IMAGES*/
+    #sale-flower1 {
+        position: absolute;
+        left: 300px;
+        top:140px;
+    }
+    #sale-flower2{
+        position: absolute;
+        left: 420px;
+        top:140px;
+    }
+    #sale-flower3 {
+        position: absolute;
+        left: 380px;
+        top:280px;
+    }
+    #sale-flower4{
+        position: absolute;
+        left: 403px;
+        top:165px;
+    }
+    #sale-flower5 {
+        position: absolute;
+        left: 350px;
+        top:300px;
+    }
+    #sale-flower6{
+        position: absolute;
+        right: 300px;
+        top:270px; 
+    }
+    #sale-flower7{
+        position: absolute;
+        right: 430px;
+        top:360px; 
+    }
+    #sale-flower8 {
+        position: absolute;
+        right: 450px;
+        top:340px; 
+    }
+    #sale-flower9{
+        position: absolute;
+        right: 390px;
+        top:280px;    
     }
 }
