--- a/csce242/project/part5-allPages/styles.css
+++ b/csce242/project/part5-allPages/styles.css
@@ -333,15 +333,14 @@ header a, #footer-nav-bottom a {
 #nonprofit-highlight-img img {
     border-radius: 10px;
     margin: 20px;
+    margin-bottom: 0;
 }
 .nonprofit-width {
     margin: 20px;
 }
 .nonprofit-container img {
-    /* width: 100%; */
     border-radius: 10px;
     margin: 20px;
-    box-shadow: 0 5px 5px var(--shadow);
 }
 .nonptofit-container {
     position: relative;
@@ -473,6 +472,14 @@ header li {
 }
 #impact-title-txt h1 {
     font-size: 48px;
+}
+#nonprofit-txt {
+    padding: 0 50px 0 50px;
+    font-size: 20px;
+}
+.nonprofit-txt-block h3 {
+    color: var(--mens);
+    margin: 0 0 30px 0;
 }
 
 
