--- a/csce242/examples/06-js/styles.css
+++ b/csce242/examples/06-js/styles.css
@@ -31,22 +31,6 @@ img {
     background:#cdb4db;
     position:relative;
 }
-
-.arrow {
-    font-size:1.5em;
-    color:white;
-    position:absolute;
-    top:32%;
-}
-
-#prev {
-    left:5%;
-}
-
-#next {
-    right:5%;
-}
-
 #slide-desc {
     position:absolute;
     bottom:5%;
@@ -97,6 +81,29 @@ table th, table td {
 table th {
     background-color: #05668d;
     color: white;
+}
+
+/*SLIDESHOW*/
+#slideshow {
+    position: relative;
+}
+.arrow {
+    display: block;
+    font-size: 5em;
+    text-decoration: none;
+    font-weight: 600;
+    position: absolute;
+    top: 30%;
+    color:white;
+}
+#arrow-next {
+    right:5%;
+}
+#arrow-prev {
+    left:5%;
+}
+.hidden {
+    display: none;
 }
 
 /* Navigation */
